# b3d-validate

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  publish.yml
examples/: integration_test.py
scripts/: release.sh
src/b3d_validate/: __init__.py  geometry.py  printability.py  rendering.py
tests/: conftest.py  test_full_check.py  test_geometry.py  test_normalize_shape.py  test_printability.py  test_rendering.py  test_reports.py  test_validate.py
