[project]
name = "b3d-validate"
version = "0.2.0"
description = "Lightweight validation toolkit for build123d shapes"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mojzis", email = "mojzis@hey.com" },
]
keywords = ["build123d", "cad", "validation", "3d-printing", "occt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "build123d",
]

[project.optional-dependencies]
mesh = ["trimesh", "numpy"]

[project.urls]
Homepage = "https://github.com/mojzis/b3d-validate"
Repository = "https://github.com/mojzis/b3d-validate"
Issues = "https://github.com/mojzis/b3d-validate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "bandit",
    "vulture",
    "deptry",
    "interrogate",
    "poethepoet",
]

[tool.uv]
exclude-newer = "3 days"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "DTZ", "T20", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = ["PLR2004", "PLR0912", "PLR0913", "PLC0415", "RUF001", "B905"]

[tool.ruff.format]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.vulture]
paths = ["src"]

[tool.deptry]

[tool.interrogate]
fail_under = 0

[tool.poe]
verbosity = -1

[tool.poe.tasks.fix]
sequence = [
    { cmd = "ruff format --quiet ." },
    { cmd = "ruff check --fix --quiet ." },
]
help = "Auto-fix: format and lint"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run linter (no fix)"

[tool.poe.tasks.typecheck]
cmd = "ty check"
help = "Run type checker"

[tool.poe.tasks.test]
cmd = "pytest -q --tb=short"
help = "Run tests"

[tool.poe.tasks.security]
cmd = "bandit -r src -q"
help = "Security scan (bandit)"

[tool.poe.tasks.vulns]
shell = "uvx pysentry-rs . || true"
interpreter = "bash"
help = "Dependency vulnerability scan"

[tool.poe.tasks.dead-code]
cmd = "vulture src"
help = "Dead code detection"

[tool.poe.tasks.unused-deps]
cmd = "deptry ."
help = "Unused dependency check"

[tool.poe.tasks._check-parallel]
shell = """
  ruff check . &
  ty check &
  bandit -r src -q &
  (uvx pysentry-rs . || true) &
  wait
"""
interpreter = "bash"

[tool.poe.tasks.check]
sequence = [
    { ref = "_check-parallel" },
    { ref = "test" },
]
help = "Run all checks (parallel where possible)"

[tool.poe.tasks.check-all]
sequence = [
    { ref = "lint" },
    { ref = "typecheck" },
    { ref = "security" },
    { ref = "vulns" },
    { ref = "dead-code" },
    { ref = "unused-deps" },
    { ref = "test" },
]
ignore_fail = true
help = "Run all checks (report all failures)"

[tool.poe.tasks.setup]
cmd = "bash scripts/install-hooks.sh"
help = "Install git hooks"

[tool.poe.tasks.release]
cmd = "bash scripts/release.sh ${bump}"
help = "Bump version, tag, and push (triggers PyPI publish). Args: patch|minor|major"

[tool.poe.tasks.release.args.bump]
positional = true
required = true
help = "Version bump type: patch, minor, or major"
